code without singleton